--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -20,14 +20,20 @@
 	@media (min-width: 992px) {
 		height: $navbar-height-lg;
 	}
-	
+	.navbar-toggler{margin: 1rem 0;}
 	.navbar-collapse {
 		max-height: 366px;
-		flex-direction: row-reverse;
 		
 		@media (max-width: 767px) {
+			overflow: auto;
 			background: white;
+			flex-direction: inherit;
+			flex: none;
+			-webkit-box-orient: inherit;
+			-webkit-box-direction: inherit;
 		}
+
+		@media (min-width: 768px) {flex-direction: row-reverse;}
 
 	}
 	.container{width:100%}
@@ -58,6 +64,7 @@
 				display: block;
 				font-family: $museo-sans-500;
 				background: none;
+				padding: 0;
 				@include transition(all 0.2s);
 
 				&:before{display: none;}
@@ -144,7 +151,7 @@
 					@media (max-width: 767px) {
 						width: calc(100% - 30px);
 						position: relative;
-						margin-bottom: 15px;
+						margin: 0;
 						left: 15px;
 					}
 					
@@ -176,6 +183,10 @@
 						opacity: 1;
 						visibility: visible;
 						max-height: 245px;
+
+						@media (max-width: 767px) {
+							margin: 10px 0;
+						}
 					}
 				}
 			}
@@ -220,8 +231,10 @@
 		}
 		.navbar-brand {
 			img {
-				height: 100%;
-    			width: auto;
+				@media (min-width: 768px) {
+					height: 100%;
+					width: auto;
+				}
 			}
 		}		
 	}
@@ -247,7 +260,7 @@
 		
 		img {
 			
-			@media (min-width: 768px) {
+			@media (min-width: 992px) {
 				width: auto;
 				max-width: inherit !important;
 				height: auto;
