--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3338,9 +3338,15 @@ ul.list-unstyled .list-circled.blue-light li:before {
 }
 
 .navbar.scrolled {
-  height: 157px;
+  height: 73px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+@media (min-width: 768px) {
+  .navbar.scrolled {
+    height: 157px;
+  }
 }
 
 .navbar.scrolled .nav > li > a {
