--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -202,7 +202,8 @@
 	}
 	
 	&.scrolled {
-		height: $navbar-height-sm;
+		height: 73px;
+		@media (min-width: 768px) {height: $navbar-height-sm;}
 		// @include box-shadow( 0 2px 10px rgba(0, 0, 0, 0.2) );
 		box-shadow: 0 2px 10px rgba(black,.2);
 		-webkit-box-shadow: 0 2px 10px rgba(black,.2);
